--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,9 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Validate CD branch
-        if: ${{ github.event_name == 'workflow_dispatch' && (github.ref != 'refs/heads/release' || github.ref != 'refs/heads/dev') }}
+        if: ${{ github.event_name == 'workflow_dispatch' && github.ref != 'refs/heads/release' }}
         run: |
-          echo It's not allowed to run CD on other branch except release or dev.
+          echo It's not allowed to run CD on other branch except release.
           exit 1
       
       - uses: actions/checkout@v2
