--- a/adaptive-card-notification/bot/package.json
+++ b/adaptive-card-notification/bot/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "notificationbot",
+  "name": "AdaptiveCardNotification",
   "version": "1.0.0",
-  "description": "Microsoft Teams Toolkit Notification Bot Sample",
+  "description": "Microsoft Teams Toolkit Adaptive Card Notification Bot Sample",
   "author": "Microsoft",
   "license": "MIT",
   "scripts": {
