--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Validate CD branch
-        if: ${{ github.event_name == 'workflow_dispatch' && github.ref != 'refs/heads/release' }}
+        if: ${{ github.event_name == 'workflow_dispatch' && (github.ref != 'refs/heads/release' || !startsWith(github.ref, 'refs/heads/hotfix/')) }}
         run: |
           echo It's not allowed to run CD on other branch except release.
           exit 1
@@ -25,14 +25,14 @@ jobs:
       
       - name: update tag
         uses: richardsimko/update-tag@v1
-        if: ${{ github.event.inputs.update-tag == 'no' }}
+        if: ${{ github.event.inputs.update-tag == 'no' || startsWith(github.ref, 'refs/heads/hotfix/') }}
         with:
           tag_name: ${{ steps.get-latest-tag.outputs.tag }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Bump version and push tag
-        if: ${{ github.event.inputs.update-tag != 'no' }}
+        if: ${{ github.event.inputs.update-tag == 'yes' && !startsWith(github.ref, 'refs/heads/hotfix/')}}
         uses: anothrNick/github-tag-action@1.26.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
