--- a/incoming-webhook-notification/.vscode/tasks.json
+++ b/incoming-webhook-notification/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "Start Incoming Webhook",
             "type": "shell",
-            "command": "npm run dev:teamsfx",
+            "command": "npm run dev",
             "isBackground": true,
             "problemMatcher": {
                 "pattern": [
