--- a/incoming-webhook-notification/.fx/configs/projectSettings.json
+++ b/incoming-webhook-notification/.fx/configs/projectSettings.json
@@ -1,8 +1,7 @@
 {
     "appName": "IncomingWebhookNotification",
-    "projectId": "228d3a4d-0560-48d2-bf5c-ac279c71b34d",
     "version": "2.1.0",
-    "isFromSample": false,
+    "isFromSample": true,
     "solutionSettings": {
         "name": "fx-solution-azure",
         "version": "1.0.0",
