--- a/hello-world-tab/.vscode/tasks.json
+++ b/hello-world-tab/.vscode/tasks.json
@@ -2,42 +2,42 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Pre Debug Check",
+            "label": "Pre Debug Check & Start All",
             "dependsOn": [
-                "dependency check",
-                "prepare dev env"
+                "validate local prerequisites",
+                "prepare local environment",
+                "Start All"
             ],
             "dependsOrder": "sequence"
         },
         {
-            "label": "dependency check",
+            "label": "validate local prerequisites",
             "type": "shell",
-            "command": "exit ${command:fx-extension.validate-dependencies}"
-        },
-        {
-            "label": "prepare dev env",
-            "dependsOn": [
-                "prepare local environment",
-                "frontend npm install"
-            ],
-            "dependsOrder": "parallel"
+            "command": "exit ${command:fx-extension.validate-local-prerequisites}",
+            "presentation": {
+                "reveal": "never"
+            }
         },
         {
             "label": "prepare local environment",
             "type": "shell",
-            "command": "exit ${command:fx-extension.pre-debug-check}"
+            "command": "exit ${command:fx-extension.pre-debug-check}",
+            "presentation": {
+                "reveal": "never"
+            }
+        },
+        {
+            "label": "Start All",
+            "dependsOn": [
+                "Start Frontend"
+            ]
         },
         {
             "label": "Start Frontend",
-            "dependsOn": [
-                "teamsfx: frontend start"
-            ],
-            "dependsOrder": "parallel"
-        },
-        {
-            "label": "frontend npm install",
             "type": "shell",
-            "command": "npm install --no-audit",
+            "command": "npm run dev:teamsfx",
+            "isBackground": true,
+            "problemMatcher": "$teamsfx-frontend-watch",
             "options": {
                 "cwd": "${workspaceFolder}/tabs"
             }
