--- a/QueryOrgUserWithMESSO/bot/package.json
+++ b/QueryOrgUserWithMESSO/bot/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@microsoft/adaptivecards-tools": "^1.0.0",
     "@microsoft/microsoft-graph-client": "^3.0.2",
-    "@microsoft/teamsfx": "^1.1.2-alpha.8d60b4f8e.0",
+    "@microsoft/teamsfx": "^1.2.0-rc.0",
     "botbuilder": ">=4.15.0 <5.0.0",
     "botbuilder-dialogs": ">=4.15.0 <5.0.0",
     "isomorphic-fetch": "^3.0.0",
