--- a/command-bot-with-sso/.vscode/launch.json
+++ b/command-bot-with-sso/.vscode/launch.json
@@ -9,7 +9,8 @@
             "presentation": {
                 "group": "remote",
                 "order": 1
-            }
+            },
+            "internalConsoleOptions": "neverOpen"
         },
         {
             "name": "Launch Remote (Chrome)",
@@ -19,7 +20,9 @@
             "presentation": {
                 "group": "remote",
                 "order": 2
-            }
+            },
+            "internalConsoleOptions": "neverOpen"
+
         },
         {
             "name": "Launch Bot (Edge)",
@@ -32,7 +35,8 @@
             "presentation": {
                 "group": "all",
                 "hidden": true
-            }
+            },
+            "internalConsoleOptions": "neverOpen"
         },
         {
             "name": "Launch Bot (Chrome)",
@@ -45,7 +49,8 @@
             "presentation": {
                 "group": "all",
                 "hidden": true
-            }
+            },
+            "internalConsoleOptions": "neverOpen"
         },
         {
             "name": "Attach to Bot",
