--- a/adaptive-card-notification/bot/package.json
+++ b/adaptive-card-notification/bot/package.json
@@ -22,7 +22,7 @@
     "@azure/storage-blob": "^12.9.0",
     "@microsoft/adaptivecards-tools": "^1.0.0",
     "@microsoft/teamsfx": "^1.0.0",
-    "botbuilder": "~4.15.0"
+    "botbuilder": "^4.15.0"
   },
   "devDependencies": {
     "@azure/functions": "^1.2.3",
