--- a/query-org-user-with-message-extension-sso/bot/package.json
+++ b/query-org-user-with-message-extension-sso/bot/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "echobot",
+  "name": "QueryOrgUserWithMESSO",
   "version": "1.0.0",
   "description": "Microsoft Teams Toolkit hello world Bot sample",
   "author": "Microsoft",
@@ -8,7 +8,7 @@
   "scripts": {
     "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run dev",
     "dev": "nodemon --exec node --inspect=9239 --signal SIGINT -r ts-node/register ./index.ts",
-    "build": "tsc --build && shx cp -r ./adaptiveCards ./lib/",
+    "build": "tsc --build && copyfiles src/public/*.html lib/",
     "start": "node ./lib/index.js",
     "watch": "nodemon --exec \"npm run start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -28,10 +28,11 @@
   },
   "devDependencies": {
     "@types/restify": "8.4.2",
+    "copyfiles": "^2.4.1",
     "env-cmd": "^10.1.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.4.4",
     "nodemon": "^2.0.7",
-    "shx": "^0.3.3"
+    "shx": "^0.3.3",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4"
   }
 }
