--- a/graph-connector-app/api/package.json
+++ b/graph-connector-app/api/package.json
@@ -18,6 +18,7 @@
         "isomorphic-fetch": "^3.0.0"
     },
     "devDependencies": {
+        "@types/node": "^18.7.18",
         "env-cmd": "^10.1.0",
         "typescript": "^4.4.4"
     }
