--- a/stocks-update-notification-bot/tsconfig.json
+++ b/stocks-update-notification-bot/tsconfig.json
@@ -9,6 +9,7 @@
     "incremental": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
   },
   "include": ["src"]
 }
