--- a/hello-world-bot/.vscode/tasks.json
+++ b/hello-world-bot/.vscode/tasks.json
@@ -34,7 +34,11 @@
         },
         {
             // Start the local tunnel service to forward public ngrok URL to local port and inspect traffic.
-            // See https://aka.ms/teamsfx-local-tunnel-task to know the details and how to customize the args.
+            // See https://aka.ms/teamsfx-local-tunnel-task for the detailed args definitions,
+            // as well as samples to:
+            //   - use your own ngrok command / configuration / binary
+            //   - use your own tunnel solution
+            //   - provide alternatives if ngrok does not work on your dev machine
             "label": "Start local tunnel",
             "type": "teamsfx",
             "command": "debug-start-local-tunnel",
