--- a/share-now/bot/package.json
+++ b/share-now/bot/package.json
@@ -23,11 +23,11 @@
         "axios": "^0.21.1",
         "botbuilder": "~4.11.0",
         "replace": "^1.2.0",
-        "restify": "~8.5.1",
+        "restify": "^10.0.0",
         "tedious": "^9.2.3"
     },
     "devDependencies": {
-        "@types/restify": "8.4.2",
+        "@types/restify": "8.5.5",
         "@types/tedious": "^4.0.3",
         "env-cmd": "^10.1.0",
         "nodemon": "^2.0.7",
