--- a/query-org-user-with-message-extension-sso/.gitignore
+++ b/query-org-user-with-message-extension-sso/.gitignore
@@ -1,11 +1,13 @@
 # TeamsFx files
-node_modules
-.backup
-.fx/configs/localSettings.json
-.fx/states/*
+teamsfx/.env.*
+
+# dependencies
+node_modules/
+
+# misc
+.env
+.deployment
 .DS_Store
-.archive
-.archive.log
-.env.teamsfx.local
-subscriptionInfo.json
-build
+
+# build
+lib/
