--- a/query-org-user-with-message-extension-sso/package.json
+++ b/query-org-user-with-message-extension-sso/package.json
@@ -1,13 +1,39 @@
 {
     "name": "query-org-user-with-me-sso",
-    "version": "0.0.1",
-    "description": "",
-    "author": "",
+    "version": "1.0.0",
+    "description": "Microsoft Teams Toolkit message extension Bot sample",
+    "engines": {
+        "node": ">=14 <=16"
+    },
+    "author": "Microsoft",
+    "license": "MIT",
+    "main": "./lib/index.js",
     "scripts": {
+        "dev:teamsfx": "node teamsfx/script/run.js . teamsfx/.env.local",
+        "dev": "nodemon --exec node --inspect=9239 --signal SIGINT -r ts-node/register ./index.ts",
+        "build": "tsc --build",
+        "start": "node ./lib/index.js",
+        "watch": "nodemon --exec \"npm run start\"",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "devDependencies": {
-        "@microsoft/teamsfx-cli": "1.*"
+    "repository": {
+        "type": "git",
+        "url": "https://github.com"
     },
-    "license": "MIT"
+    "dependencies": {
+        "@microsoft/microsoft-graph-client": "^3.0.2",
+        "@microsoft/teamsfx": "^2.0.0",
+        "botbuilder": ">=4.15.0 <5.0.0",
+        "isomorphic-fetch": "^3.0.0",
+        "restify": "^8.5.1"
+    },
+    "devDependencies": {
+        "@microsoft/teamsfx-run-utils": "alpha",
+        "@types/restify": "8.4.2",
+        "@types/node": "^14.0.0",
+        "ts-node": "^10.4.0",
+        "typescript": "^4.4.4",
+        "nodemon": "^2.0.7",
+        "shx": "^0.3.3"
+    }
 }
