chore: rename teamsApp action arg in app.local.yml

--- a/hello-world-bot-with-tab/teamsfx/app.local.yml
+++ b/hello-world-bot-with-tab/teamsfx/app.local.yml
@@ -32,10 +32,10 @@ configureApp:
         TAB_ENDPOINT: https://localhost:53000
   - uses: teamsApp/validate
     with:
-      manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
+      manifestPath: ./appPackage/manifest.template.json # Path to manifest template
   - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
     with:
-      manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
+      manifestPath: ./appPackage/manifest.template.json # Path to manifest template
       outputZipPath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
       outputJsonPath: ./build/appPackage/manifest.${{TEAMSFX_ENV}}.json
   - uses: teamsApp/update # Apply the Teams app manifest to an existing Teams app. Will use the app id in manifest file to determine which Teams app to update.
