--- a/NPM-search-connector-M365/teamsfx/app.local.yml
+++ b/NPM-search-connector-M365/teamsfx/app.local.yml
@@ -28,11 +28,11 @@ provision:
 configureApp:
   - uses: teamsApp/validate
     with:
-      manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
+      manifestPath: ./appPackage/manifest.template.json # Path to manifest template
 
   - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
     with:
-      manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
+      manifestPath: ./appPackage/manifest.template.json # Path to manifest template
       outputZipPath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
       outputJsonPath: ./build/appPackage/manifest.${{TEAMSFX_ENV}}.json
 
