--- a/todo-list-SPFx/teamsfx/app.local.yml
+++ b/todo-list-SPFx/teamsfx/app.local.yml
@@ -10,11 +10,11 @@ registerApp:
 configureApp:
   - uses: teamsApp/validate
     with:
-      manifestTemplatePath: ./appPackage/manifest.template.local.json # Path to manifest template
+      manifestPath: ./appPackage/manifest.template.local.json # Path to manifest template
 
   - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
     with:
-      manifestTemplatePath: ./appPackage/manifest.template.local.json # Path to manifest template
+      manifestPath: ./appPackage/manifest.template.local.json # Path to manifest template
       outputZipPath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
       outputJsonPath: ./build/appPackage/manifest.${{TEAMSFX_ENV}}.json
 
