--- a/adaptive-card-notification/teamsapp.yml
+++ b/adaptive-card-notification/teamsapp.yml
@@ -1,9 +1,11 @@
 version: 1.0.0
 
+environmentFolderPath: ./teamsAppEnv
+
 provision:
   - uses: botAadApp/create # Creates a new AAD app for Bot Registration.
     with:
-      name: hello-world-bot-aad
+      name: adaptive-card-notifi
     # Output: following environment variable will be persisted in current environment's .env file.
     # BOT_ID: the AAD app client id created for Bot Registration.
     # SECRET_BOT_PASSWORD: the AAD app client secret created for Bot Registration.
@@ -17,32 +19,32 @@ provision:
         parameters: ./infra/azure.parameters.json
         deploymentName: Create-resources-for-bot
       bicepCliVersion: v0.9.1 # Teams Toolkit will download this bicep CLI version from github for you, will use bicep CLI in PATH if you remove this config.
-    # Output: every bicep output will be persisted in current environment's .env file with certain naming conversion. Refer https://aka.ms/teamsfx-provision-arm#output for more details on the naming conversion rule.
+    # Output: every bicep output will be persisted in current environment's .env file with certain naming conversion. Refer https://aka.ms/teamsfx-actions/arm-deploy for more details on the naming conversion rule.
 
 deploy:
-  - uses: cli/runNpmCommand # Run npm command
+  - uses: cli/runNpmCommand
     with:
       args: install
   - uses: cli/runNpmCommand
     with:
       args: run build --if-present
-  - uses: azureAppService/deploy # Deploy bits to Azure App Serivce
+  - uses: azureFunctions/deploy
     with:
-      distributionPath: . # Deploy base folder
-      ignoreFile: ./.webappignore # Can be changed to any ignore file location, leave blank will ignore nothing
-      resourceId: ${{BOT_AZURE_APP_SERVICE_RESOURCE_ID}} # The resource id of the cloud resource to be deployed to
+      # deploy base folder
+      distributionPath: ./
+      # can be changed to any ignore file location, leave blank will ignore nothing
+      ignoreFile: ./.funcignore
+      # the resource id of the cloud resource to be deployed to
+      resourceId: ${{BOT_AZURE_FUNCTION_APP_RESOURCE_ID}}
 
 registerApp:
   - uses: teamsApp/create # Creates a Teams app
     with:
-      name: hello-world-bot # Teams app name
+      name: ${{TEAMS_APP_NAME}} # Teams app name
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
 configureApp:
-  - uses: teamsApp/validate
-    with:
-      manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
   - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
     with:
       manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
