--- a/adaptive-card-notification/teamsfx/app.yml
+++ b/adaptive-card-notification/teamsfx/app.yml
@@ -45,7 +45,7 @@ registerApp:
 configureApp:
   - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
     with:
-      manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
+      manifestPath: ./appPackage/manifest.template.json # Path to manifest template
       outputZipPath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
       outputJsonPath: ./build/appPackage/manifest.${{TEAMSFX_ENV}}.json
   - uses: teamsApp/update # Apply the Teams app manifest to an existing Teams app. Will use the app id in manifest file to determine which Teams app to update.
@@ -57,10 +57,10 @@ configureApp:
 publish:
   - uses: teamsApp/validate
     with:
-      manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
+      manifestPath: ./appPackage/manifest.template.json # Path to manifest template
   - uses: teamsApp/zipAppPackage
     with:
-      manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
+      manifestPath: ./appPackage/manifest.template.json # Path to manifest template
       outputZipPath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
       outputJsonPath: ./build/appPackage/manifest.${{TEAMSFX_ENV}}.json
   - uses: teamsApp/publishAppPackage # Publish the app to Teams app catalog
