--- a/adaptive-card-notification/bot/package.json
+++ b/adaptive-card-notification/bot/package.json
@@ -22,12 +22,13 @@
     "@azure/storage-blob": "^12.9.0",
     "@microsoft/adaptivecards-tools": "^1.0.0",
     "@microsoft/teamsfx": "^2.0.0",
-    "botbuilder": "^4.15.0"
+    "botbuilder": "^4.18.0"
   },
   "devDependencies": {
     "@azure/functions": "^1.2.3",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
+    "@types/node": "^14.0.0",
     "azurite": "^3.16.0",
     "chai": "^4.3.6",
     "env-cmd": "^10.1.0",
