--- a/bot-sso/teamsapp.yml
+++ b/bot-sso/teamsapp.yml
@@ -1,6 +1,6 @@
 version: 1.0.0
 
-environmentFolderPath: ./teamsAppEnv
+environmentFolderPath: ./env
 
 provision:
   - uses: aadApp/create # Creates a new AAD app to authenticate users if AAD_APP_CLIENT_ID environment variable is empty
