--- a/hello-world-bot/teamsapp.yml
+++ b/hello-world-bot/teamsapp.yml
@@ -1,6 +1,6 @@
 version: 1.0.0
 
-environmentFolderPath: ./teamsAppEnv
+environmentFolderPath: ./env
 
 provision:
   - uses: botAadApp/create # Creates a new AAD app for Bot Registration.
