chore: remove TEAMS_APP_NAME env

--- a/adaptive-card-notification/appPackage/manifest.template.json
+++ b/adaptive-card-notification/appPackage/manifest.template.json
@@ -15,7 +15,7 @@
         "outline": "resources/outline.png"
     },
     "name": {
-        "short": "${{TEAMS_APP_NAME}}",
+        "short": "adaptive-card-notification",
         "full": "full name for adaptive-card-notifi"
     },
     "description": {
