--- a/adaptive-card-notification/teamsfx/app.local.yml
+++ b/adaptive-card-notification/teamsfx/app.local.yml
@@ -3,14 +3,14 @@ version: 1.0.0
 registerApp:
   - uses: teamsApp/create # Creates a Teams app
     with:
-      name: ${{TEAMS_APP_NAME}} # Teams app name
+      name: adaptive-card-notifi-local # Teams app name
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
 provision:
   - uses: botAadApp/create # Creates a new AAD app for bot if BOT_ID environment variable is empty
     with:
-      name: adaptive-card-notifi
+      name: adaptive-card-notification
     # Output: following environment variable will be persisted in current environment's .env file.
     # BOT_ID: the AAD app client id created for bot
     # SECRET_BOT_PASSWORD: the AAD app client secret created for bot
