--- a/hello-world-in-meeting/appPackage/manifest.template.json
+++ b/hello-world-in-meeting/appPackage/manifest.template.json
@@ -15,7 +15,7 @@
         "outline": "resources/outline.png"
     },
     "name": {
-        "short": "${{TEAMS_APP_NAME}}",
+        "short": "hello-world-in-meeting",
         "full": "Full name for hello-world-in-meeting"
     },
     "description": {
