--- a/hello-world-tab-with-backend/teamsfx/app.yml
+++ b/hello-world-tab-with-backend/teamsfx/app.yml
@@ -71,7 +71,7 @@ registerApp:
 
   - uses: teamsApp/create # Creates a Teams app
     with:
-      name: ${{TEAMS_APP_NAME}} # Teams app name
+      name: hello-world-tab-with-backend # Teams app name
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
