--- a/stocks-update-notification-bot-dotnet/StocksUpdateNotificationBot/appPackage/manifest.template.json
+++ b/stocks-update-notification-bot-dotnet/StocksUpdateNotificationBot/appPackage/manifest.template.json
@@ -15,7 +15,7 @@
         "outline": "resources/outline.png"
     },
     "name": {
-        "short": "${{TEAMS_APP_NAME}}",
+        "short": "stocks-update-notif-bot",
         "full": "Full name for stocks-update-notif-bot"
     },
     "description": {
